# manim-chess-plugin

./: .gitignore  README.md  pyproject.toml  requirements.txt  user_examples.py
src/manim_chessrender/: __init__.py
src/manim_chessrender/mobjects/: chess_cli.py  chess_piece.py  chessboard.py
tests/: __init__.py  test_unit.py
